trunk/Archive2/8b/6dfd95a5a7414d/output
main.cpp:13:12: error: 'std::string hiall::gethello()' cannot be overloaded
     string gethello() {
            ^
main.cpp:11:12: error: with 'std::string hiall::gethello()'
     string gethello();
            ^
