trunk/Archive2/8b/6dfd95a5a7414d/main.cpp
#include <iostream>
#include <string>


using namespace std;

using std::string;

class hiall {
    public:
    string gethello();
    
    string gethello() {
        return "hello world";
    }
};

int main() {
    hiall *hiclass = new hiall();
    string words = hiclass->gethello();
        
    std::cout << words << std::endl;
        
    return 0;
}